[tool.poetry]
name = "misa"
version = "0.1.0"
description = ""
authors = ["wijez <viet.info.43@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
selenium = "^4.33.0"
pandas = "^2.3.0"
numpy = "^2.3.1"
openpyxl = "^3.1.5"
logging = "^0.4.9.6"
pyautogui = "^0.9.54"
pyscreeze = "^1.0.1"
opencv-python = "^4.11.0.86"
requests = "^2.32.4"
pdfplumber = "^0.11.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
